[gd_scene load_steps=6 format=3 uid="uid://dt7sfk6670b88"]

[ext_resource type="Script" path="res://Scenes/Screens/Start Screen/StartScreen.gd" id="1_70b4p"]
[ext_resource type="PackedScene" uid="uid://dqx32ytchstvp" path="res://Scenes/Screens/Settings/settings_menu.tscn" id="2_cwi8m"]
[ext_resource type="Shader" path="res://Scenes/UI/UI.gdshader" id="2_guaru"]
[ext_resource type="AudioStream" uid="uid://dpi8cf6ldj15k" path="res://Audio/Sounds/retro-game-sfx_jump-bumpwav-14853.mp3" id="4_h5urn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_brg4k"]
shader = ExtResource("2_guaru")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.5
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 5.0
shader_parameter/distort_intensity = 0.001
shader_parameter/noise_opacity = 0.1
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.0
shader_parameter/aberration = 0.003
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = -0.65
shader_parameter/vignette_opacity = 0.3

[node name="Start_Screen" type="CanvasLayer"]
script = ExtResource("1_70b4p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Settings")
theme_override_font_sizes/font_size = 100
text = "Start Game"

[node name="Settings" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = 127.5
offset_right = 197.5
offset_bottom = 272.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../../SettingsMenu")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 100
text = "Settings"

[node name="Exit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 327.5
offset_right = 93.0
offset_bottom = 472.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Start")
theme_override_font_sizes/font_size = 100
text = "Exit"

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -682.0
offset_right = 682.0
offset_bottom = 409.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 300
text = "Asteroids
"

[node name="High_Score" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32

[node name="SettingsMenu" parent="." node_paths=PackedStringArray("my_scenes_button") instance=ExtResource("2_cwi8m")]
visible = false
my_scenes_button = NodePath("../Control/Settings")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_brg4k")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997598)
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_group_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_h5urn")

[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_settings_pressed"]
[connection signal="visibility_changed" from="Control/Settings" to="." method="_on_settings_visibility_changed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
